test/scc/pp/errors/014.t
#define A(a, b) a ## b

A(+, ++)